# assistant-specialist-browser

./: .gitignore  Cargo.toml
.cargo/: config.toml.example
.github/workflows/: publish-image.yml
contracts/: assistant-specialist-browser.md  claw-specialist-browser.md
image/: Dockerfile
src/: artifact.rs  error.rs  lib.rs  network.rs  profile.rs  readiness.rs  spec.rs
tests/: delegation_e2e.rs
