# Standalone repo for the browser specialist. It is its own single-package
# workspace and depends on the platform crates by path (this crate and the
# products all sit side-by-side under the same parent directory).
[workspace]

[package]
name = "assistant-specialist-browser"
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
claw-core = { path = "../assistant-platform/crates/claw-core" }
claw-capabilities = { path = "../assistant-platform/crates/claw-capabilities" }
claw-agent-graph = { path = "../assistant-platform/crates/claw-agent-graph" }
claw-specialist-spec = { path = "../assistant-platform/crates/claw-specialist-spec" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
claw-db = { path = "../assistant-platform/crates/claw-db" }
claw-session = { path = "../assistant-platform/crates/claw-session" }
rusqlite = "0.32.1"
serde_json = "1.0.149"
tempfile = "3.27.0"
