# Standalone repo for the browser specialist. It is its own single-package
# workspace and depends on the platform crates by path (this crate and the
# products all sit side-by-side under the same parent directory).
[workspace]

[package]
name = "assistant-specialist-browser"
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
assistant-core = { path = "../assistant-platform/crates/assistant-core" }
assistant-capabilities = { path = "../assistant-platform/crates/assistant-capabilities" }
assistant-agent-graph = { path = "../assistant-platform/crates/assistant-agent-graph" }
assistant-specialist-spec = { path = "../assistant-platform/crates/assistant-specialist-spec" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
assistant-db = { path = "../assistant-platform/crates/assistant-db" }
assistant-session = { path = "../assistant-platform/crates/assistant-session" }
rusqlite = "0.32.1"
serde_json = "1.0.149"
tempfile = "3.27.0"
