# Standalone repo for the browser specialist. It is its own single-package
# workspace and depends on the platform crates from git. For local co-development
# a gitignored `.cargo/config.toml` redirects these git sources to the sibling
# `../assistant-platform` checkout (see `.cargo/config.toml.example`).
[workspace]

[package]
name = "assistant-specialist-browser"
version = "0.1.0"
edition = "2024"
license = "UNLICENSED"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
assistant-core = { git = "https://github.com/thisdotrob/assistant-platform", branch = "main" }
assistant-capabilities = { git = "https://github.com/thisdotrob/assistant-platform", branch = "main" }
assistant-agent-graph = { git = "https://github.com/thisdotrob/assistant-platform", branch = "main" }
assistant-specialist-spec = { git = "https://github.com/thisdotrob/assistant-platform", branch = "main" }
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
assistant-db = { git = "https://github.com/thisdotrob/assistant-platform", branch = "main" }
assistant-session = { git = "https://github.com/thisdotrob/assistant-platform", branch = "main" }
rusqlite = "0.32.1"
serde_json = "1.0.149"
tempfile = "3.27.0"
